test/SemanticAnalysis/LifetimeMethods/InvalidReturnTypeIsValid.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__isvalid' has incorrect return type
	void __isvalid() const noexcept { }
}

// CHECK: 1 error generated.
